<resources>
	<string name="app_name">JobZi</string>
	<string name="title_activity_login">LoginActivity</string>
	<string name="title_activity_signup">SignupActivity</string>
	<string name="title_activity_admin">AdminActivity</string>
	<string name="title_activity_service_editor">ServiceEditorActivity</string>
	<string name="email">Email</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="profile_menu_label">Profile</string>
	<string name="service">Service</string>
	<string name="add_service_label">Add a Service</string>
	<string name="update_service_label">Editing: "%s"</string>
	<string name="dialog_delete_service">Are you sure you want to delete %s?</string>
	<string name="delete">Delete</string>
	<string name="logout">Logout</string>
	<string name="action_settings">Action Settings</string>
	<string name="services_label">Services</string>
	<string name="users_label">Users</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="rate_hint_text">Rate ($/hour)</string>
	<string name="service_name_hint_text">Service Name</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="user_preferences">User Preferences</string>
	<string name="availabilities_label">Availabilities</string>
	<string name="address">Address</string>
	<string name="phone_number">Phone Number</string>
	<string name="description">Description</string>
	<string name="licensed_question">Licensed?</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="sign_up_as">Sign up as:</string>
	<string name="title_profile_editor">Edit Profile</string>
	<string name="company_name">Company Name</string>
	<string name="add">Add</string>
	<string name="start_time">Start Time</string>
	<string name="end_time">End Time</string>
	<string name="day_of_week_placeholder">Day: %s</string>
	<string name="dialog_delete_availability">Are you sure you want to delete this availability time slot?</string>
	<string name="bookings_label">Bookings</string>
	<string name="set">Set</string>
	<string name="day">Day</string>
	<string name="rating">Rating</string>
	<string name="search">Search</string>
	<string name="select_time">Select Time</string>
	<string name="comment">Comment</string>
	<string name="rate_service_provider">Rate: %s</string>

</resources>
