<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ProfileActivity">

	<EditText
		android:id="@+id/usernameEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/username"
		android:inputType="textPersonName"/>

	<EditText
		android:id="@+id/firstNameEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/first_name"
		android:inputType="textPersonName"/>

	<EditText
		android:id="@+id/lastNameEditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/last_name"
		android:inputType="textPersonName"/>

	<TextView
		android:id="@+id/emailDisplayTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"/>

	<FrameLayout
		android:id="@+id/extraProfileInformationFragment"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/saveButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/save"/>

		<Button
			android:id="@+id/cancelButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cancel"/>

	</LinearLayout>

</LinearLayout>