<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".HomeOwnerSearchActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@+id/serviceSearchLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/serviceTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				android:layout_marginStart="32dp"
				android:layout_marginLeft="32dp"
				android:layout_marginTop="16dp"
				android:text="@string/service"
				android:textSize="24sp"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/serviceDisplayTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/serviceTextView"
				android:layout_alignStart="@id/serviceTextView"
				android:layout_alignLeft="@id/serviceTextView"
				android:textSize="20sp"
				android:textStyle="italic"
				tools:text="Test Service"/>

			<Button
				android:id="@+id/setServiceButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@id/serviceDisplayTextView"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginRight="16dp"
				android:textAllCaps="false"
				android:text="@string/set"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/dayTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_marginBottom="16dp"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"
				android:text="@string/day"
				android:textSize="24sp"
				android:textStyle="bold"/>

			<Spinner
				android:id="@+id/dayOfWeekSpinner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/dayTextView"
				android:layout_alignStart="@id/dayTextView"
				android:layout_alignLeft="@id/dayTextView"
				android:textAllCaps="false"/>

			<TextView
				android:id="@+id/availabilityTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBottom="@id/dayOfWeekSpinner"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_toEndOf="@id/dayOfWeekSpinner"
				android:layout_toRightOf="@id/dayOfWeekSpinner"
				android:textSize="20sp"
				tools:text="13:30-14:00"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<CheckBox
				android:id="@+id/useRatingCheckBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_alignParentLeft="true"/>

			<TextView
				android:id="@+id/ratingTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginLeft="16dp"
				android:layout_marginBottom="16dp"
				android:layout_toEndOf="@id/useRatingCheckBox"
				android:layout_toRightOf="@id/useRatingCheckBox"
				android:text="@string/rating"
				android:textSize="24sp"
				android:textStyle="bold"/>

			<RatingBar
				android:id="@+id/ratingBar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/ratingTextView"
				android:layout_alignStart="@id/ratingTextView"
				android:layout_alignLeft="@id/ratingTextView"/>

		</RelativeLayout>

		<Button
			android:id="@+id/searchForServiceProviderButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/search"
			android:textAllCaps="false"/>

		<Button
			android:id="@+id/cancelButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/cancel"
			android:textAllCaps="false"/>

	</LinearLayout>

</ScrollView>